@@ -41,6 +41,7 @@
    - PowerPC64 ELFv2 little-endian ABI is now supported including full
      fetch backend.
    - Cadence Tensilica Xtensa is now supported.
+   - LoongArch is now supported.
 
    - On Linux, tracing of IFUNC symbols is supported.  On i386,
      x86_64, ppc32 with secure PLT and ppc64, IRELATIVE PLT slots are
